--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -2,5 +2,5 @@
 <form action="/users/create-session" method="POST">
     <input type="email" name="email" placeholder="Email" required>
     <input type="password" name="password" placeholder="Password" required>
-    <input type="sumit" name="Sign In">
+    <input type="submit" value="Sign In">
 </form>
