--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,3 +2,12 @@
 <h1>
     <%= title%>
 </h1>
+<p>
+    Name: <%= user.name%>
+</p>
+<p>
+    Email: <%= user.email%>
+</p>
+<p>
+    <a href="/users/destroySession">Sign Out</a>
+</p>
