--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,29 @@
 <h1>
     <%= title%>
 </h1>
+
+<section id="feed-posts">
+    <h1>Posts</h1>
+    <form action="/posts/create" method="POST" id="new-post-form">
+        <textarea name="content"  cols="30" rows="3" placeholder="type here..."></textarea>
+        <input type="submit" value="Post">
+    </form> 
+
+    <div id="posts-list-container">
+        <ul>
+            <% for(post of posts) {  %>
+                <li>
+                    <p>
+                        <%= post.content%>
+                    <br>
+                    <small>
+                        <%= post.user.name%>
+                    </small>
+                    </p>
+                    
+                </li>
+            <% } %>    
+        </ul>
+    </div>
+
+</section>
