--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,10 +4,12 @@
 
 <section id="feed-posts">
     <h1>Posts</h1>
+    <% if(locals.user) { %>
     <form action="/posts/create" method="POST" id="new-post-form">
         <textarea name="content"  cols="30" rows="3" placeholder="type here..."></textarea>
         <input type="submit" value="Post">
     </form> 
+    <% } %>
 
     <div id="posts-list-container">
         <ul>
@@ -20,9 +22,30 @@
                         <%= post.user.name%>
                     </small>
                     </p>
+                    <div class="post-comments">
+                        <% if(locals.user){ %>
+                            <form action="/comments/create" method="POST">
+                                <input type="text" name="content" placeholder="Add comment">
+                                <input type="hidden" name="post" value="<%= post._id%>">
+                                <input type="submit" value="Add Comment">
+                            </form>
+                        <% } %>
+                        <div class="post-comments-list">
+                            <ul id="post-comments-<%= post._id%>">
+                                <% for(comment of post.comments){ %>
+                                    <%= comment.content%>
+                                    <br>
+                                    <small>
+                                        <%= comment.user.name%>
+                                    </small>
+                                <% } %>
+                            </ul>
+                        </div>
+                    </div>
                     
                 </li>
-            <% } %>    
+            <% } %> 
+
         </ul>
     </div>
 
