--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,6 +16,11 @@
             <% for(post of posts) {  %>
                 <li>
                     <p>
+                        <small>
+                            <% if(locals.user && (locals.user.id == post.user.id)) {%>
+                            <a href="/posts/destroy/<%= post.id%>">X</a>
+                            <% } %>
+                        </small>
                         <%= post.content%>
                     <br>
                     <small>
