--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
         <title>
             <%= title %>
         </title>
+        
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
@@ -10,6 +11,9 @@
     </head>
     <body>
         <%-  include('_header');%>
+        <% if(flash.success && flash.success.length > 0) { %>
+            <%= flash.success%>
+        <% } %>
 
         <main id="layout-main">
             <%- body %>
