--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,8 +1,8 @@
-<li>
+<li id="post-<%= post._id%>">
     <p>
         <small>
             <% if(locals.user && (locals.user.id == post.user.id)) {%>
-            <a href="/posts/destroy/<%= post.id%>">X</a>
+            <a class="delete-post-button" href="/posts/destroy/<%= post.id%>">X</a>
             <% } %>
         </small>
         <%= post.content%>
