--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -8,3 +8,6 @@
 <p>
     <a href="/users/auth/google">Google Sign In/Sign Up</a>
 </p>
+<p>
+    <a href="/users/auth/facebook">Facebook Sign In/Sign Up</a>
+</p>
