--- a/views/user_sign_in.ejs
+++ b/views/user_sign_in.ejs
@@ -11,3 +11,6 @@
 <p>
     <a href="/users/auth/facebook">Facebook Sign In/Sign Up</a>
 </p>
+<p>
+    <a href="/users/reset-password-page">Forgot Password</a>
+</p>
