--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,10 +1,21 @@
-<li>
-    <% if(locals.user && ((locals.user.id == comment.user.id) || (locals.user.id == post.user.id))) {%>
-        <a href="/comments/destroy/<%= comment.id%>">X</a>
+<li id="comment-<%= comment._id %>">
+    <p>
+        <% if(locals.user && (locals.user.id == comment.user || locals.user.id == post.user.id )) {%>
+            <a class="delete-comment-button" href="/comments/destroy/<%= comment.id%>">X</a>
         <% } %>
-    <%= comment.content%>
-    <br>
-    <small>
-        <%= comment.user.name%>
-    </small>
-    </li>
+        <%= comment.content%>
+        <br>
+        <small>
+            <%= comment.user.name%>
+        </small>
+        <small>
+            <% if(locals.user){ %>
+            <a data-likes="<%= comment.likes.length%>" class="toggle-like-button" href="/likes/toggle/?id=<%=comment.id%>&type=Comment">
+                <%= comment.likes.length%> Likes
+            </a>
+            <% } else {%>
+                <%= comment.likes.length%> Likes
+            <% } %>
+        </small>
+    </p>
+</li>
