--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -10,10 +10,23 @@
     <small>
         <%= post.user.name%>
     </small>
+
+    <br>
+    <small>
+        <% if(locals.user){ %>
+            <a href="/likes/toggle/?id=<%=post._id%>&type=Post" class="toggle-like-button" data-likes="<%= post.likes.length%>">
+                <%= post.likes.length%> Likes
+            </a>
+        <% } else{ %>
+            <%= post.likes.length%> Likes
+        <% } %> 
+    </small>
+
+
     </p>
     <div class="post-comments">
         <% if(locals.user){ %>
-            <form action="/comments/create" method="POST">
+            <form id="post-<%= post._id %>-comments-form" action="/comments/create" method="POST">
                 <input type="text" name="content" placeholder="Add comment">
                 <input type="hidden" name="post" value="<%= post._id%>">
                 <input type="submit" value="Add Comment">
