--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,44 +1,49 @@
+<link rel="stylesheet" href="css/home.css">
+<link rel="stylesheet" href="/css/chat_box.css">
 <h1>
     <%= title%>
 </h1>
+<div id="home-container">
+    <section id="feed-posts">
+        <h1>Posts</h1>
+        <% if(locals.user) { %>
+        <form action="/posts/create" method="POST" id="new-post-form">
+            <textarea name="content" cols="30" rows="3" placeholder="type here..."></textarea>
+            <input type="submit" value="Post">
+        </form>
+        <% } %>
 
-<section id="feed-posts">
-    <h1>Posts</h1>
-    <% if(locals.user) { %>
-    <form action="/posts/create" method="POST" id="new-post-form">
-        <textarea name="content"  cols="30" rows="3" placeholder="type here..."></textarea>
-        <input type="submit" value="Post">
-    </form> 
-    <% } %>
-
-    <div id="posts-list-container">
-        <ul>
-            <% for(post of posts) {  %>
+        <div id="posts-list-container">
+            <ul>
+                <% for(post of posts) {  %>
                 <%- include('_post') -%>
-            <% } %> 
+                <% } %>
 
-        </ul>
-    </div>
+            </ul>
+        </div>
 
-</section>
+    </section>
 
-<section id="user-friends">
-    <h4>Friends</h4>
-    <% for(u of all_users) {  %>
+    <section id="user-friends">
+        <h4>Friends</h4>
+        <% for(u of all_users) {  %>
         <p>
             <a href="/users/profile/<%= u.id%>"><%= u.name %></a>
         </p>
-    <% } %>
-</section>
+        <% } %>
+    </section>
+    <%- include('_chat_box')  -%>
+</div>
 
 <script src="/js/home_post_comments.js"></script>
 <script src="/js/home_posts.js"></script>
 
 <script src="/js/toggle_likes.js"></script>
-<script >
-    $('.toggle-like-button').each(function(){
+<script>
+    $('.toggle-like-button').each(function () {
         let self = this;
         let toggleLike = new ToggleLike(self);
     });
 </script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+<script src="/js/chat_engine.js"></script>
