--- a/views/home.ejs
+++ b/views/home.ejs
@@ -47,3 +47,8 @@
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
 <script src="/js/chat_engine.js"></script>
+<% if(locals.user){ %>
+    <script >
+        new ChatEngine('user-chat-box', '<%= locals.user._id%>');
+    </script>
+<% } %>
