--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="css/home.css">
-<link rel="stylesheet" href="/css/chat_box.css">
+<link rel="stylesheet" href="<%= assetPath('css/home.css')%>">
+<link rel="stylesheet" href="<%= assetPath('css/chat_box.css')%>">
 <h1>
     <%= title%>
 </h1>
@@ -35,10 +35,10 @@
     <%- include('_chat_box')  -%>
 </div>
 
-<script src="/js/home_post_comments.js"></script>
-<script src="/js/home_posts.js"></script>
+<script src="<%= assetPath('js/home_post_comments.js') %>"></script>
+<script src="<%= assetPath('js/home_posts.js') %>"></script>
 
-<script src="/js/toggle_likes.js"></script>
+<script src="<%= assetPath('js/toggle_likes.js') %>"></script>
 <script>
     $('.toggle-like-button').each(function () {
         let self = this;
@@ -46,7 +46,7 @@
     });
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-<script src="/js/chat_engine.js"></script>
+<script src="<%= assetPath('js/chat_engine.js') %>"></script>
 <% if(locals.user){ %>
     <script >
         new ChatEngine('user-chat-box', '<%= locals.user.email%>');
