--- a/views/home.ejs
+++ b/views/home.ejs
@@ -46,9 +46,10 @@
     });
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-<script src="<%= assetPath('js/chat_engine.js') %>"></script>
-<% if(locals.user){ %>
-    <script >
-        new ChatEngine('user-chat-box', '<%= locals.user.email%>');
-    </script>
-<% } %>
+<script src="<%=assetPath('js/chat_engine.js')%>"></script>
+<%if(locals.user){%>
+<script>
+    new ChatEngine('user-chatbox', "<%=locals.user.email %>")
+</script>
+<%}%>
+<!-- just a second -->
